# robot_solution_1

./: Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build-code.yml  docker-image.yml  main-workflow.yml
doc/: system_architecture_prompt.md
src/data_collection_package/: CMakeLists.txt  package.xml
src/data_collection_package/src/: data_collection_node.cpp
src/system_interfaces/: CMakeLists.txt  package.xml
src/system_interfaces/msg/: SystemState.msg
src/system_state_machine_package/: CMakeLists.txt  package.xml
src/system_state_machine_package/include/system_state_machine_package/: state_machine.hpp  state_machine_message_publisher.hpp
src/system_state_machine_package/include/system_state_machine_package/state_machine/: context.hpp  event.hpp  state.hpp
src/system_state_machine_package/include/system_state_machine_package/states/: initializing_state.hpp  running_state.hpp
src/system_state_machine_package/src/: system_state_machine_node.cpp
src/system_state_machine_package/src/state_machine/: context.cpp  event.cpp
src/system_state_machine_package/src/states/: initializing_state.cpp  running_state.cpp
